bindings/rust/libgpiod-sys/src/lib.rs


extern "C" {
    /// Reserve a set of GPIO lines, set the direction to output.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to reserve.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    /// * `default_vals` Initial line values.
    ///
    /// ## Return
    /// `0` if the lines were properly reserved, `-1` on failure.
    pub fn gpiod_line_request_bulk_output_flags(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
        flags: c_int,
        default_vals: *const c_int,
    ) -> c_int;
}

extern "C" {
    /// Request rising edge event notifications on a set of lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to request.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_bulk_rising_edge_events_flags(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Request falling edge event notifications on a set of lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to request.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_bulk_falling_edge_events_flags(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Request all event type notifications on a set of lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to request.
    /// * `consumer` Name of the consumer.
    /// * `flags` Additional request flags.
    ///
    /// ## Return
    /// `0` if the operation succeeds, `-1` on failure.
    pub fn gpiod_line_request_bulk_both_edges_events_flags(
        bulk: *mut gpiod_line_bulk,
        consumer: *const c_char,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Release a previously reserved line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    pub fn gpiod_line_release(line: *mut gpiod_line);
}

extern "C" {
    /// Release a set of previously reserved lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to release.
    ///
    /// If the lines were not previously requested together, the behavior is
    /// undefined.
    pub fn gpiod_line_release_bulk(bulk: *mut gpiod_line_bulk);
}

extern "C" {
    /// Read current value of a single GPIO line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// `0` or `1` if the operation succeeds. On error this routine returns `-1`
    /// and sets the last error number.
    pub fn gpiod_line_get_value(line: *mut gpiod_line) -> c_int;
}

extern "C" {
    /// Read current values of a set of GPIO lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to reserve.
    /// * `values` An array big enough to hold [`gpiod_line_bulk_num_lines(bulk)`](gpiod_line_bulk_num_lines) values.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If succeeds, this routine fills the values array with a set of values in
    /// the same order, the lines are added to [`gpiod_line_bulk`]. If the lines were not
    /// previously requested together, the behavior is undefined.
    pub fn gpiod_line_get_value_bulk(
        bulk: *mut gpiod_line_bulk,
        values: *mut c_int,
    ) -> c_int;
}

extern "C" {
    /// Set the value of a single GPIO line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `value` New value.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    pub fn gpiod_line_set_value(
        line: *mut gpiod_line,
        value: c_int,
    ) -> c_int;
}

extern "C" {
    /// Set the values of a set of GPIO lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to reserve.
    /// * `values` An array holding [`gpiod_line_bulk_num_lines(bulk)`](gpiod_line_bulk_num_lines) new values for lines.
    /// A `NULL` pointer is interpreted as a logical low for all lines.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If the lines were not previously requested together, the behavior is
    /// undefined.
    pub fn gpiod_line_set_value_bulk(
        bulk: *mut gpiod_line_bulk,
        values: *const c_int,
    ) -> c_int;
}

extern "C" {
    /// Update the configuration of a single GPIO line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `direction` Updated direction which may be one of
    /// [`GPIOD_LINE_REQUEST_DIRECTION_AS_IS`],
    /// [`GPIOD_LINE_REQUEST_DIRECTION_INPUT`], or
    /// [`GPIOD_LINE_REQUEST_DIRECTION_OUTPUT`].
    /// * `flags` Replacement flags.
    /// * `value` The new output value for the line when direction is
    /// [`GPIOD_LINE_REQUEST_DIRECTION_OUTPUT`].
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    pub fn gpiod_line_set_config(
        line: *mut gpiod_line,
        direction: c_int,
        flags: c_int,
        value: c_int,
    ) -> c_int;
}

extern "C" {
    /// Update the configuration of a set of GPIO lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines.
    /// * `direction` Updated direction which may be one of
    /// [`GPIOD_LINE_REQUEST_DIRECTION_AS_IS`],
    /// [`GPIOD_LINE_REQUEST_DIRECTION_INPUT`], or
    /// [`GPIOD_LINE_REQUEST_DIRECTION_OUTPUT`].
    /// * `flags` Replacement flags.
    /// * `values` An array holding [`gpiod_line_bulk_num_lines(bulk)`](gpiod_line_bulk_num_lines) new logical values
    /// for lines when direction is
    /// [`GPIOD_LINE_REQUEST_DIRECTION_OUTPUT`].
    /// A `NULL` pointer is interpreted as a logical low for all lines.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If the lines were not previously requested together, the behavior is
    /// undefined.
    pub fn gpiod_line_set_config_bulk(
        bulk: *mut gpiod_line_bulk,
        direction: c_int,
        flags: c_int,
        values: *const c_int,
    ) -> c_int;
}

extern "C" {
    /// Update the configuration flags of a single GPIO line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `flags` Replacement flags.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    pub fn gpiod_line_set_flags(
        line: *mut gpiod_line,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Update the configuration flags of a set of GPIO lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines.
    /// * `flags` Replacement flags.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If the lines were not previously requested together, the behavior is
    /// undefined.
    pub fn gpiod_line_set_flags_bulk(
        bulk: *mut gpiod_line_bulk,
        flags: c_int,
    ) -> c_int;
}

extern "C" {
    /// Set the direction of a single GPIO line to input.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    pub fn gpiod_line_set_direction_input(line: *mut gpiod_line) -> c_int;
}

extern "C" {
    /// Set the direction of a set of GPIO lines to input.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If the lines were not previously requested together, the behavior is
    /// undefined.
    pub fn gpiod_line_set_direction_input_bulk(bulk: *mut gpiod_line_bulk)
        -> c_int;
}

extern "C" {
    /// Set the direction of a single GPIO line to output.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `value` The logical value output on the line.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    pub fn gpiod_line_set_direction_output(
        line: *mut gpiod_line,
        value: c_int,
    ) -> c_int;
}

extern "C" {
    /// Set the direction of a set of GPIO lines to output.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines.
    /// * `values` An array holding [`gpiod_line_bulk_num_lines(bulk)`](gpiod_line_bulk_num_lines) new logical values
    /// for lines. A `NULL` pointer is interpreted as a logical low
    /// for all lines.
    ///
    /// ## Return
    /// `0` is the operation succeeds. In case of an error this routine
    /// returns `-1` and sets the last error number.
    ///
    /// ## Note
    /// If the lines were not previously requested together, the behavior is
    /// undefined.
    pub fn gpiod_line_set_direction_output_bulk(
        bulk: *mut gpiod_line_bulk,
        values: *const c_int,
    ) -> c_int;
}

/// Event type.
#[allow(non_camel_case_types)]
pub enum gpiod_line_event_type {
    GPIOD_LINE_EVENT_RISING_EDGE = 1,
    GPIOD_LINE_EVENT_FALLING_EDGE = 2,
}

/// Structure holding event info.
#[repr(C)]
#[derive(Copy, Clone, Eq, PartialEq, Hash, Debug)]
pub struct gpiod_line_event {
    /// Best estimate of time of event occurrence.
    pub ts: timespec,
    /// Type of the event that occurred.
    pub event_type: c_int,
    /// Offset of line on which the event occurred.
    pub offset: c_int,
}

extern "C" {
    /// Wait for an event on a single line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `timeout` Wait time limit.
    ///
    /// ## Return
    /// `0` if wait timed out, `-1` if an error occurred, `1` if an event
    /// occurred.
    pub fn gpiod_line_event_wait(
        line: *mut gpiod_line,
        timeout: *const timespec,
    ) -> c_int;
}

extern "C" {
    /// Wait for events on a set of lines.
    ///
    /// ## Arguments
    /// * `bulk` Set of GPIO lines to monitor.
    /// * `timeout` Wait time limit.
    /// * `event_bulk` Bulk object in which to store the line handles on which
    /// events occurred. Can be `NULL`.
    ///
    /// ## Return
    /// `0` if wait timed out, `-1` if an error occurred, `1` if at least one
    /// event occurred.
    pub fn gpiod_line_event_wait_bulk(
        bulk: *mut gpiod_line_bulk,
        timeout: *const timespec,
        event_bulk: *mut gpiod_line_bulk,
    ) -> c_int;
}

extern "C" {
    /// Read next pending event from the GPIO line.
    ///
    /// ## Arguments
    /// * `line` GPIO line object.
    /// * `event` Buffer to which the event data will be copied.
    ///
    /// ## Return
    /// `0` if the event was read correctly, `-1` on error.
    ///
    /// ## Note
    /// This function will block if no event was queued for this line.
    pub fn gpiod_line_event_read(
        line: *mut gpiod_line,
        event: *mut gpiod_line_event,
    ) -> c_int;
}
